fix(activations): use spottedAt for scoring/display and fix cache-first bug
Two related fixes for activation freshness:

1. Use spottedAt (when someone reported hearing the station) instead of
   lastSeenAt (when we scraped the API) for:
   - Scoring in Activation.isFavorable() and getScore()
   - Frontend "X min ago" display
   - Cache loading filter and sort order

2. Fix bug in AbstractExternalDataClient where cache was checked FIRST
   before calling API, causing subsequent refreshes to never hit the API.
   Cache is now only used as fallback when API fails.

Closes: use of spottedAt gives users accurate "last heard" timestamps
Ref: #262 (follow-up to remove now-redundant client caching)